--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
   <div class="container">
-    <button class="navbar-toggler hidden-sm-up" 
-            type="button" data-toggle="collapse" 
-            data-target="#exCollapsingNavbar">
+    <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
       &#9776;
     </button>
     <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar">
@@ -19,9 +17,45 @@
 
       <ul class="nav navbar-nav pull-xs-right">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Cart</a>
-          <div class="dropdown-menu">
-            <span>The Cart Placeholder</span>
+          <button class="btn btn-primary dropdown-toggle" type="button" id="cartDropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Cart: 2 item(s) - $20.00
+          </button>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="cartDropdownMenu">
+            <table class="table table-bordered table-inverse">
+                <thead>
+                  <tr>
+                    <th>Name</th>
+                    <th>Amount</th>
+                    <th>Qty</th>
+                    <th>Sum</th>
+                  </tr>
+                </thead>
+                <tfoot>
+                  <tr>
+                    <td colspan="4" style="text-align:center">
+                      Total:<strong>$20.00</strong><br>
+                      <div class="btn-group">
+                        <button class="btn btn-primary">View Cart</button>
+                        <button class="btn btn-success">Checkout</button>
+                      </div>
+                    </td>
+                  </tr>
+                </tfoot>
+								<tbody>
+                  <tr>
+									  <td >Product 1</td>
+									  <td >$10</td>
+									  <td >x1<br><span class="delete-cart">Del</span></td>
+									  <td >$10.00</td>
+                  </tr>
+                  <tr>
+                    <td >Product 2</td>
+                    <td >$5.00</td>
+                    <td >x2<br><span class="delete-cart">Del</span></td>
+                    <td >$10.00</td>
+                  </tr>
+                </tbody>
+              </table>
           </div>
         </li>
       </ul>
@@ -31,85 +65,152 @@
 <!-- /.navbar -->
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
-      <img class="img-fluid img-rounded center-block product-slide-item" src="http://placehold.it/1110x480" alt="">
-    </div>
-  </div>
-  <!-- /.row -->
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-4">
+    <div class="col-md-3">
       <div class="card">
-        <img class="card-img-top center-block product-item" src="http://placehold.it/270x171" alt="Bakery">
+        <div class="card-header">
+          Quick Shop
+        </div>
         <div class="card-block">
-          <h4 class="card-title">Bakery</h4>
-          <p class="card-text">The best cupcakes, cookies, cakes, pies, cheesecakes, fresh bread, biscotti, muffins, bagels, fresh coffee and
-            more.
-          </p>
-          <a href="#" class="btn btn-primary">Browse</a>
+          <div class="input-group">
+            <input type="text" class="form-control"
+                   placeholder="Search for...">
+            <span class="input-group-btn">
+              <button class="btn btn-secondary"
+                      type="button">Go!</button>
+            </span>
+          </div>
         </div>
       </div>
-    </div>
-    <!-- /.col -->
-    <div class="col-xs-12 col-sm-6 col-md-4">
+      <!-- /.card -->
       <div class="card">
-        <img class="card-img-top center-block product-item" src="http://placehold.it/270x171" alt="Takeaway">
+        <div class="card-header">
+          Categories
+        </div>
         <div class="card-block">
-          <h4 class="card-title">Takeaway</h4>
-          <p class="card-text">It's consistently excellent, dishes are superb and healthily cooked with high quality ingredients.</p>
-          <a href="#" class="btn btn-primary">Browse</a>
+          <div class="list-group">
+            <a href="#" class="list-group-item">All</a>
+            <a href="#" class="list-group-item">Meat</a>
+            <a href="#" class="list-group-item">Seafood</a>
+            <a href="#" class="list-group-item">Bakery</a>
+            <a href="#" class="list-group-item">Dairy</a>
+            <a href="#" class="list-group-item">Fruits & Vegetables</a>
+          </div>
         </div>
       </div>
-    </div>
-    <!-- /.col -->
-    <div class="col-xs-12 col-sm-6 col-md-4">
-      <div class="card">
-        <img class="card-img-top center-block product-item" src="http://placehold.it/270x171" alt="Dairy">
-        <div class="card-block">
-          <h4 class="card-title">Dairy</h4>
-          <p class="card-text">A dairy product is food produced from the milk of mammals.<br><br></p>
-          <a href="#" class="btn btn-primary">Browse</a>
-        </div>
-      </div>
+      <!-- /.card -->
     </div>
     <!-- /.col -->
-    <div class="col-xs-12 col-sm-6 col-md-4">
-      <div class="card">
-        <img class="card-img-top center-block product-item" src="http://placehold.it/270x171" alt="Meat">
-        <div class="card-block">
-          <h4 class="card-title">Meat</h4>
-          <p class="card-text">Only superior quality beef, lamb, and pork.<br><br><br></p>
-          <a href="#" class="btn btn-primary">Browse</a>
+    <div class="col-md-9">
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-lg-4">
+          <div class="card">
+            <img class="card-img-top img-fluid center-block product-item" src="http://placehold.it/270x171" alt="Product 1">
+            <div class="card-block text-xs-center">
+              <h4 class="card-title">Product 1</h4>
+              <h4 class="card-subtitle"><span class="label label-success">$10</span></h4>
+              <hr>
+              <div class="btn-group" role="group">
+                <button class="btn btn-primary">Buy</button>
+                <button class="btn btn-info">Info</button>
+              </div>
+            </div>
+          </div>
+          <!-- /.card -->
         </div>
-      </div>
-    </div>
-    <!-- /.col -->
-    <div class="col-xs-12 col-sm-6 col-md-4">
-      <div class="card">
-        <img class="card-img-top center-block product-item" src="http://placehold.it/270x171" alt="Seafood">
-        <div class="card-block">
-          <h4 class="card-title">Seafood</h4>
-          <p class="card-text">Great place to buy fresh and organic seafood at reasonable prices!<br><br></p>
-          <a href="#" class="btn btn-primary">Browse</a>
+        <!-- /.col -->
+        <div class="col-xs-12 col-sm-6 col-lg-4">
+          <div class="card">
+            <img class="card-img-top img-fluid center-block product-item" src="http://placehold.it/270x171" alt="Product 2">
+            <div class="card-block text-xs-center">
+              <h4 class="card-title">Product 2</h4>
+              <h4 class="card-subtitle"><span class="label label-danger"><s>$20</s> &gt; $5</span></h4>
+              <hr>
+              <div class="btn-group" role="group">
+                <button class="btn btn-primary">Buy</button>
+                <button class="btn btn-info">Info</button>
+              </div>
+            </div>
+          </div>
+          <!-- /.card -->
         </div>
-      </div>
-    </div>
-    <!-- /.col -->
-    <div class="col-xs-12 col-sm-6 col-md-4">
-      <div class="card">
-        <img class="card-img-top center-block product-item" src="http://placehold.it/270x171" alt="Fruit & Veg">
-        <div class="card-block">
-          <h4 class="card-title">Fruit & Veg</h4>
-          <p class="card-text">A variety of fresh fruits and vegetables.<br><br><br></p>
-          <a href="#" class="btn btn-primary">Browse</a>
+        <!-- /.col -->
+        <div class="col-xs-12 col-sm-6 col-lg-4">
+          <div class="card">
+            <img class="card-img-top img-fluid center-block product-item" src="http://placehold.it/270x171" alt="Product 3">
+            <div class="card-block text-xs-center">
+              <h4 class="card-title">Product 3</h4>
+              <h4 class="card-subtitle"><span class="label label-success">$50</span></h4>
+              <hr>
+              <div class="btn-group" role="group">
+                <button class="btn btn-primary">Buy</button>
+                <button class="btn btn-info">Info</button>
+              </div>
+            </div>
+          </div>
+          <!-- /.card -->
         </div>
+        <!-- /.col -->
+        <div class="col-xs-12 col-sm-6 col-lg-4">
+          <div class="card">
+            <img class="card-img-top img-fluid center-block product-item" src="http://placehold.it/270x171" alt="Product 4">
+            <div class="card-block text-xs-center">
+              <h4 class="card-title">Product 4</h4>
+              <h4 class="card-subtitle"><span class="label label-success">$75</span></h4>
+              <hr>
+              <div class="btn-group" role="group">
+                <button class="btn btn-primary">Buy</button>
+                <button class="btn btn-info">Info</button>
+              </div>
+            </div>
+          </div>
+          <!-- /.card -->
+        </div>
+        <!-- /.col -->
+        <div class="col-xs-12 col-sm-6 col-lg-4">
+          <div class="card">
+            <img class="card-img-top img-fluid center-block product-item" src="http://placehold.it/270x171" alt="Product 5">
+            <div class="card-block text-xs-center">
+              <h4 class="card-title">Product 5</h4>
+              <h4 class="card-subtitle"><span class="label label-success">$120</span></h4>
+              <hr>
+              <div class="btn-group" role="group">
+                <button class="btn btn-primary">Buy</button>
+                <button class="btn btn-info">Info</button>
+              </div>
+            </div>
+          </div>
+          <!-- /.card -->
+        </div>
+        <!-- /.col -->
+        <div class="col-xs-12 col-sm-6 col-lg-4">
+          <div class="card">
+            <img class="card-img-top img-fluid center-block product-item" src="http://placehold.it/270x171" alt="Product 6">
+            <div class="card-block text-xs-center">
+              <h4 class="card-title">Product 6</h4>
+              <h4 class="card-subtitle"><span class="label label-success">$1500</span></h4>
+              <hr>
+              <div class="btn-group" role="group">
+                <button class="btn btn-primary">Buy</button>
+                <button class="btn btn-info">Info</button>
+              </div>
+            </div>
+          </div>
+          <!-- /.card -->
+        </div>
+        <!-- /.col -->
       </div>
+      <!-- /.row -->
     </div>
     <!-- /.col -->
   </div>
   <!-- /.row -->
 </div>
-<<<<<<< HEAD
-<!-- /. container --> 
-=======
 <!-- /.container -->
->>>>>>> 2719cddfeb0a5843a2cb163da093124ed6ba9976
+<footer class="footer">
+  <div class="container">
+    <address>
+      <strong>Contact Info</strong><br>
+      0000 Market St, Suite 000, San Francisco, CA 00000, (123) 456-7890, <a href="mailto:#">support@dream-bean.com</a>
+    </address>
+  </div>
+</footer>
